[project]
name = "brax-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brax>=0.12.4",
    "mujoco>=3.3.3",
    "playground>=0.0.4",
    "robot-descriptions>=1.18.0",
    "rsl-rl-lib>=2.3.3",
    "gymnasium>=0.29.0",
    "imageio>=2.37.0",
]
