[project]
name = "brax-benchmark"
version = "0.1.0"
description = "A simple benchmark comparing Brax and RSL-RL for humanoid training."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.3.3",
    "playground>=0.0.4",
    "robot-descriptions>=1.18.0",
    "gymnasium>=0.29.0",
    "imageio>=2.37.0",
    "wandb>=0.20.1",
    "tensorboard>=2.19.0",
    "torch<2.0.0",
    "numpy<2.0.0",
    "rsl-rl-lib>=2.3.3",
    "jax[cuda]>=0.5.3",
    "brax>=0.12.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
